Adds (optional) plotly dependency for notebook 4

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ scipy = "*"
 scikit-learn = "*"
 pandas = "*"
 jupyterlab = "*"
+plotly = "*"
+ipywidgets = "*"
 
 [requires]
 python_version = "3.8"
